  * Removed the conditional spectrum calculator (it was experimental and
    not working properly in many cases)

  [Michele Simionato]
  * Now we log only when the DB schema is really upgraded
  * Fixed the documentation about extracting hazard curves and maps
  * Fixed KeyError in calculations using the EasternCan15Mid with PGA
  * Replaced hard-coded limit to 25 levels in the MRD postprocessor
    with a simple warning
  * Fixed bug in `oq zip`: when starting from a directory different from the
    job.ini directory, .hdf5 files for nonparametric ruptures were not included

python3-oq-engine (3.16.1-1~xenial01) xenial; urgency=low

  [Michele Simionato]
  * Fixed event based calculations running out of memory due to hazard curve
    arrays being instantiated without need
  * Sampling the ruptures was raising a BlockingIOError sometimes
  * Fixed install.py to not set the shared_dir

  [Kendra Johnson]
  * Fixed bug in extendModel with multiple branchsets

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Wed, 01 Mar 2023 08:47:07 +0000

python3-oq-engine (3.16.0-3~xenial01) xenial; urgency=low

  [Matteo Nastasi]
  * Bumped oq-libs to version 3.8.0

  [Kendra Johnson]
  * Corrected a bug when using the `reqv` feature: all sources were
    collapsed instead of the ones with the specified tectonic region types

  [Michele Simionato, Paolo Tormene]
  * Fixed the `agg_curves` extractor to also extract individual curves, thus
    fixing the QGIS plugin visualization

  [Michele Simionato]
  * Optimized the rupture sampling for MultiFaultSources
  * Supported `collect_rlzs` together with `disagg_by_src` to avoid running
    out of memory in models with many realizations and many sources

  [Marco Pagani]
  * Implemented the correction of Lanzano et al. (2019) as described in
    Lanzano et al. (2022)

  [Michele Simionato]
  * Fixed disaggregation calculations when too few tasks were generated

  [Anirudh Rao, Michele Simionato]