@@ -205,7 +205,8 @@ class MultiFaultSource(BaseSeismicSource):
     @property
     def data(self):  # compatibility with NonParametricSeismicSource
         for i, rup in enumerate(self.iter_ruptures()):
-            yield rup, self.probs_occur[i]
+            if rup.mag >= self.min_mag:
+                yield rup, self.probs_occur[i]
 
     polygon = NP.polygon
     wkt = NP.wkt
