@@ -12,10 +12,12 @@
   * Now we log only when the DB schema is really upgraded
   * Fixed the documentation about extracting hazard curves and maps
   * Fixed KeyError in calculations using the EasternCan15Mid with PGA
+  * The `minimum_magnitude` parameter was ignored for multiFault sources
   * Replaced hard-coded limit to 25 levels in the MRD postprocessor
     with a simple warning
   * Fixed bug in `oq zip`: when starting from a directory different from the
     job.ini directory, .hdf5 files for nonparametric ruptures were not included
+  * Fixed a 32 bit / 64 bit bug in the hinge function of Kuehn et al. (2020)
 
 python3-oq-engine (3.16.1-1~xenial01) xenial; urgency=low
 
